syntax = "proto3";

import "google/protobuf/struct.proto";

package prop_group;

option go_package = "./prop_group;prop_group_v1";

service PropertyGroupService {
    rpc GetPropertyGroupList (Empty) returns (PropertyGroupList);
}

message Empty {}

message PropertyGroup {
    int64 id = 1;
    google.protobuf.Struct title = 2;
    string alt_name = 3;
    bool is_primary = 4;
    string comment = 5;
    string created_at = 6;
    string updated_at = 7;
}

message PropertyGroupList {
    repeated PropertyGroup items = 1;
}

message Property {
    int64 id = 1;
    google.protobuf.Struct title = 2;
    string alt_name = 3;
    string comment = 4;
    string created_at = 5;
    string updated_at = 6;
}
